Seguimos con el mapa

--- a/MyHomeApp/src/main/webapp/index.html
+++ b/MyHomeApp/src/main/webapp/index.html
@@ -124,5 +124,7 @@
       r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>-->
+    <!-- Mi API KEY de Google Maps -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCw0DJBxg5DJcFQMUqbmso2_XULhxMWlo&callback=Function.prototype"></script>
   </body>
 </html>
