--- a/MyHomeApp/src/main/webapp/index.html
+++ b/MyHomeApp/src/main/webapp/index.html
@@ -125,6 +125,6 @@
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>-->
     <!-- Mi API KEY de Google Maps -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCw0DJBxg5DJcFQMUqbmso2_XULhxMWlo&callback=Function.prototype"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCw0DJBxg5DJcFQMUqbmso2_XULhxMWlo&callback=Function.prototype&v=weekly"></script>
   </body>
 </html>
