--- a/MyHomeApp/src/main/webapp/index.html
+++ b/MyHomeApp/src/main/webapp/index.html
@@ -124,7 +124,7 @@
       r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>-->
-    <!-- Mi API KEY de Google Maps -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBshIqL1rcIdIinKJJf9xqeSyMQyPGbT8&callback=Function.prototype&v=weekly"></script>
+    <!-- Mi API KEY de Google Maps (AIzaSyDBshIqL1rcIdIinKJJf9xqeSyMQyPGbT)-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnFy97utQhnV_fx7v9VOVgmCFvwPrpk90&callback=Function.prototype&v=weekly"></script>
   </body>
 </html>
